# RayTracer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Camera.h  Canvas.h  Color.h  Computations.h  Intersectable.h  Intersection.h  Intersections.h  Light.cpp  Light.h  Material.h  Matrix.cpp  Matrix.h  Noise.cpp  Noise.h  Pattern.cpp  Pattern.h  Plane.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  TestShape.h  Transforms.cpp  Transforms.h  Tuple.cpp  Tuple.h  World.cpp  World.h  clock.cpp  main.cpp
tests/: CMakeLists.txt  CameraTests.cpp  CanvasTests.cpp  ColorTests.cpp  IntersectableTests.cpp  IntersectionTests.cpp  LightTests.cpp  MaterialTests.cpp  MatrixTests.cpp  PatternTests.cpp  PlaneTests.cpp  RayTests.cpp  SphereTests.cpp  TransformationTests.cpp  TupleTests.cpp  WorldTests.cpp
